# Fusion

./: .gitignore  MS_sim.jl  README.md  efficency_plot.jl
anode_desighn/: anode_analysis.jl  anode_sim.jl  cathode_sim.jl  data_analysis.jl  e_feild.jl  graph_anode.jl  mesh_anode.py  ml_anode.jl  test.jl
anode_desighn/1.0/: analyze_data.jl  anode_sim.jl  ml_anode.jl
anode_desighn/2.0/: cathode_sim.jl  get_data.jl
anode_desighn/anode_data/: appratures_10.json  appratures_100.json  appratures_102.json  appratures_104.json  appratures_106.json  appratures_108.json  appratures_110.json  appratures_112.json  appratures_114.json  appratures_116.json  appratures_118.json  appratures_12.json  appratures_120.json  appratures_122.json  appratures_124.json  appratures_126.json  appratures_128.json  appratures_130.json  appratures_132.json  appratures_134.json  appratures_136.json  appratures_138.json  appratures_14.json  appratures_140.json  appratures_142.json  appratures_144.json  appratures_146.json  appratures_148.json  appratures_150.json  appratures_152.json  appratures_154.json  appratures_156.json  appratures_158.json  appratures_16.json  appratures_160.json  appratures_162.json  appratures_164.json  appratures_166.json  appratures_168.json  appratures_170.json  (+139 more)
anode_desighn/anode_data_plots/: appratures_10.html  appratures_100.html  appratures_102.html  appratures_104.html  appratures_106.html  appratures_108.html  appratures_110.html  appratures_112.html  appratures_114.html  appratures_116.html  appratures_118.html  appratures_12.html  appratures_120.html  appratures_122.html  appratures_124.html  appratures_126.html  appratures_128.html  appratures_130.html  appratures_132.html  appratures_134.html  appratures_136.html  appratures_138.html  appratures_14.html  appratures_140.html  appratures_142.html  appratures_144.html  appratures_146.html  appratures_148.html  appratures_150.html  appratures_152.html  appratures_154.html  appratures_156.html  appratures_158.html  appratures_16.html  appratures_160.html  appratures_162.html  appratures_164.html  appratures_166.html  appratures_168.html  appratures_170.html  (+57 more)
anode_desighn/anode_meshes/: appratures_10.stl  appratures_100.stl  appratures_102.stl  appratures_104.stl  appratures_106.stl  appratures_108.stl  appratures_110.stl  appratures_112.stl  appratures_114.stl  appratures_116.stl  appratures_118.stl  appratures_12.stl  appratures_120.stl  appratures_122.stl  appratures_124.stl  appratures_126.stl  appratures_128.stl  appratures_130.stl  appratures_132.stl  appratures_134.stl  appratures_136.stl  appratures_138.stl  appratures_14.stl  appratures_140.stl  appratures_142.stl  appratures_144.stl  appratures_146.stl  appratures_148.stl  appratures_150.stl  appratures_152.stl  appratures_154.stl  appratures_156.stl  appratures_158.stl  appratures_16.stl  appratures_160.stl  appratures_162.stl  appratures_164.stl  appratures_166.stl  appratures_168.stl  appratures_170.stl  (+139 more)
cathode_desighn/: .clang-format  .gitignore  CMakeLists.txt  MC_data.json  build.sh  cathode_sim.jl  main.cpp  make_mesh.h  mesh_meta_data.json  path_profile.prof  plot.h  solve_path.h  solve_pde.h  stats_analysis.jl  test.jl
cathode_desighn/.cache/clangd/index/: AAA.h.DAA9C370055DD097.idx  main.cpp.B269A304C04EC64B.idx  main.cpp.F59F32E5ED659AEE.idx  make_mesh.h.5B00243CCDBCCF1F.idx  make_mesh.h.956E725454F75BCC.idx  octo_tree.h.D668A3A3CED0D2D2.idx  plot.h.C7DB3ACB6B658E25.idx  solve_path.h.188A59D0ED741642.idx  solve_pde.h.44CBD61647F6BBA1.idx  solve_pde.h.4F1637224230935F.idx
cathode_desighn/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  path_profile.prof
cathode_desighn/build-debug/.cache/clangd/index/: fit_dist.h.CBB7395F58BB1929.idx  main.cpp.B269A304C04EC64B.idx  make_mesh.h.956E725454F75BCC.idx  octo_tree.h.D668A3A3CED0D2D2.idx  plot.h.C7DB3ACB6B658E25.idx  solve_path.h.188A59D0ED741642.idx  solve_pde.h.4F1637224230935F.idx
cathode_desighn/build-debug/Debug/Fusion.dSYM/Contents/: Info.plist
cathode_desighn/build-debug/Debug/Fusion.dSYM/Contents/Resources/Relocations/aarch64/: Fusion.yml
cathode_desighn/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  path_profile.prof
cathode_desighn/build-release/Release/: Fusion  path_profile.prof
cathode_desighn/c++/: .clang-format  CMakeLists.txt  main.cpp  make_mesh.h
cathode_desighn/c++/.cache/clangd/index/: main.cpp.7C7E22B31D0CA0F5.idx  make_mesh.h.3DD9506E6D140F09.idx
cathode_desighn/cathode_data/: appratures_10.json  appratures_100.json  appratures_102.json  appratures_104.json  appratures_106.json  appratures_108.json  appratures_110.json  appratures_112.json  appratures_114.json  appratures_116.json  appratures_118.json  appratures_12.json  appratures_120.json  appratures_122.json  appratures_124.json  appratures_126.json  appratures_128.json  appratures_130.json  appratures_132.json  appratures_134.json  appratures_136.json  appratures_138.json  appratures_14.json  appratures_140.json  appratures_142.json  appratures_144.json  appratures_146.json  appratures_148.json  appratures_150.json  appratures_152.json  appratures_154.json  appratures_156.json  appratures_158.json  appratures_16.json  appratures_160.json  appratures_162.json  appratures_164.json  appratures_166.json  appratures_168.json  appratures_170.json  (+139 more)
cathode_desighn/julia/: cathode_sim.jl  clean_data.jl  test.jl
cathode_desighn/mesh_cache/: mesh_2110.msh
cathode_desighn/meshes/: app_10.msh  app_12.msh  app_14.msh  app_16.msh  app_18.msh  app_20.msh  app_22.msh  app_24.msh  app_26.msh  app_28.msh  app_30.msh  app_32.msh  app_34.msh  app_36.msh  app_38.msh  app_40.msh  app_42.msh  app_44.msh  app_46.msh  app_6.msh  app_8.msh
cathode_desighn/src/: AAA.h  fit_dist.h  main.cpp  make_mesh.h  octo_tree.h  plot.h  solve_path.h  solve_pde.h  stats.h
cathode_desighn/src/plots/: plot.html  plot.js  plot_data.json
cathode_desighn/stats/: main.py  pyrightconfig.json
vlasov/: fixed_bvp.py  main.py  pyproject.toml  pyrightconfig.json
(+181 files in other folders)
